call/solana/build-error.txt
â¯ anchor build
WARNING: Adding `solana-program` as a separate dependency might cause conflicts.
To solve, remove the `solana-program` dependency and use the exported crate from `anchor-lang`.
`use solana_program` becomes `use anchor_lang::solana_program`.
Program name: `connected`

   Compiling proc-macro2 v1.0.94
   Compiling libc v0.2.170
   Compiling syn v1.0.109
   Compiling thiserror v1.0.69
   Compiling serde_json v1.0.140
   Compiling semver v1.0.26
   Compiling generic-array v0.14.7
   Compiling serde v1.0.218
   Compiling typenum v1.18.0
   Compiling cfg-if v1.0.0
   Compiling hashbrown v0.15.2
   Compiling equivalent v1.0.2
   Compiling indexmap v2.7.1
   Compiling once_cell v1.20.3
   Compiling autocfg v1.4.0
   Compiling winnow v0.7.3
   Compiling shlex v1.3.0
   Compiling toml_datetime v0.6.8
   Compiling subtle v2.4.1
   Compiling ahash v0.7.8
   Compiling ahash v0.8.11
   Compiling feature-probe v0.1.1
   Compiling bv v0.11.1
   Compiling toml_edit v0.22.24
   Compiling quote v1.0.39
   Compiling syn v2.0.99
   Compiling cpufeatures v0.2.17
   Compiling rustc_version v0.4.1
   Compiling jobserver v0.1.32
   Compiling proc-macro-crate v3.2.0
   Compiling cc v1.2.16
   Compiling solana-frozen-abi-macro v1.18.15
   Compiling cfg_aliases v0.2.1
   Compiling rustversion v1.0.20
   Compiling zerocopy v0.7.35
   Compiling borsh v1.5.5
   Compiling crypto-common v0.1.6
   Compiling block-buffer v0.10.4
   Compiling digest v0.10.7
   Compiling solana-frozen-abi v1.18.15
   Compiling sha2 v0.10.8
   Compiling num-traits v0.2.19
   Compiling memoffset v0.9.1
   Compiling hashbrown v0.13.2
   Compiling hashbrown v0.11.2
   Compiling borsh-derive-internal v0.10.4
   Compiling borsh-schema-derive-internal v0.9.3
   Compiling borsh-derive-internal v0.9.3
   Compiling borsh-schema-derive-internal v0.10.4
   Compiling memchr v2.7.4
   Compiling lazy_static v1.5.0
   Compiling log v0.4.26
   Compiling ryu v1.0.20
   Compiling arrayref v0.3.9
   Compiling either v1.14.0
   Compiling constant_time_eq v0.3.1
   Compiling bs58 v0.4.0
   Compiling keccak v0.1.5
   Compiling arrayvec v0.7.6
   Compiling itoa v1.0.15
   Compiling sha3 v0.10.8
   Compiling itertools v0.10.5
   Compiling getrandom v0.2.15
   Compiling anyhow v1.0.97
   Compiling unicode-segmentation v1.12.0
   Compiling base64 v0.21.7
   Compiling bs58 v0.5.1
   Compiling heck v0.3.3
   Compiling solana-security-txt v1.1.1
   Compiling assert_matches v1.5.0
   Compiling blake3 v1.6.1
   Compiling solana-program v1.18.15
   Compiling anchor-derive-space v0.30.1
   Compiling serde_derive v1.0.218
   Compiling thiserror-impl v1.0.69
   Compiling bytemuck_derive v1.8.1
   Compiling borsh-derive v1.5.5
   Compiling solana-sdk-macro v1.18.15
   Compiling num-derive v0.4.2
   Compiling spl-program-error-derive v0.4.1
   Compiling num_enum_derive v0.7.3
   Compiling num_enum v0.7.3
   Compiling spl-discriminator-syn v0.2.0
   Compiling spl-discriminator-derive v0.2.0
   Compiling bytemuck v1.22.0
   Compiling serde_bytes v0.11.16
   Compiling bincode v1.3.3
   Compiling toml v0.5.11
   Compiling anchor-lang-idl-spec v0.1.0
   Compiling anchor-syn v0.30.1
   Compiling anchor-lang-idl v0.1.1
   Compiling proc-macro-crate v0.1.5
   Compiling borsh-derive v0.9.3
   Compiling borsh-derive v0.10.4
   Compiling borsh v0.9.3
   Compiling borsh v0.10.4
   Compiling anchor-attribute-account v0.30.1
   Compiling anchor-attribute-constant v0.30.1
   Compiling anchor-attribute-access-control v0.30.1
   Compiling anchor-attribute-event v0.30.1
   Compiling anchor-derive-accounts v0.30.1
   Compiling anchor-derive-serde v0.30.1
   Compiling anchor-attribute-error v0.30.1
   Compiling spl-program-error v0.4.4
   Compiling solana-zk-token-sdk v1.18.15
   Compiling spl-discriminator v0.2.5
   Compiling spl-memo v4.0.4
   Compiling spl-token v4.0.3
   Compiling spl-pod v0.2.5
   Compiling spl-type-length-value v0.4.6
   Compiling spl-token-group-interface v0.2.5
   Compiling spl-tlv-account-resolution v0.6.5
   Compiling spl-token-metadata-interface v0.3.5
   Compiling spl-transfer-hook-interface v0.6.5
   Compiling spl-token-2022 v3.0.5
   Compiling anchor-attribute-program v0.30.1
   Compiling spl-associated-token-account v3.0.4
   Compiling anchor-lang v0.30.0
   Compiling anchor-spl v0.30.0
   Compiling connected v0.1.0 (/Users/user/Desktop/zeta-hackathon/call/solana/programs/connected)
warning: unused variable: `ctx`
  --> programs/connected/src/lib.rs:12:23
   |
12 |     pub fn initialize(ctx: Context<Initialize>) -> Result<()> {
   |                       ^^^ help: if this is intentional, prefix it with an underscore: `_ctx`
   |
   = note: `#[warn(unused_variables)]` on by default

warning: `connected` (lib) generated 1 warning (run `cargo fix --lib -p connected` to apply 1 suggestion)
    Finished release [optimized] target(s) in 48.31s
   Compiling proc-macro2 v1.0.94
   Compiling unicode-ident v1.0.18
   Compiling version_check v0.9.5
   Compiling typenum v1.18.0
   Compiling cfg-if v1.0.0
   Compiling serde v1.0.218
   Compiling libc v0.2.170
   Compiling syn v1.0.109
   Compiling subtle v2.4.1
   Compiling byteorder v1.5.0
   Compiling autocfg v1.4.0
   Compiling memchr v2.7.4
   Compiling equivalent v1.0.2
   Compiling hashbrown v0.15.2
   Compiling generic-array v0.14.7
   Compiling indexmap v2.7.1
   Compiling winnow v0.7.3
   Compiling thiserror v1.0.69
   Compiling anyhow v1.0.97
   Compiling once_cell v1.20.3
   Compiling serde_json v1.0.140
   Compiling itoa v1.0.15
   Compiling semver v1.0.26
   Compiling ryu v1.0.20
   Compiling num-traits v0.2.19
error[E0412]: cannot find type `SourceFile` in crate `proc_macro`
   --> /Users/user/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/proc-macro2-1.0.94/src/wrapper.rs:366:26
    |
366 |     Compiler(proc_macro::SourceFile),
    |                          ^^^^^^^^^^ not found in `proc_macro`
    |
help: consider importing one of these structs
    |
1   + use crate::SourceFile;
    |
1   + use crate::fallback::SourceFile;
    |
help: if you import `SourceFile`, refer to it directly
    |
366 -     Compiler(proc_macro::SourceFile),
366 +     Compiler(SourceFile),
    |

error[E0412]: cannot find type `SourceFile` in crate `proc_macro`
   --> /Users/user/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/proc-macro2-1.0.94/src/wrapper.rs:372:32
    |
372 |     fn nightly(sf: proc_macro::SourceFile) -> Self {
    |                                ^^^^^^^^^^ not found in `proc_macro`
    |
help: consider importing one of these structs
    |
1   + use crate::SourceFile;
    |
1   + use crate::fallback::SourceFile;
    |
help: if you import `SourceFile`, refer to it directly
    |
372 -     fn nightly(sf: proc_macro::SourceFile) -> Self {
372 +     fn nightly(sf: SourceFile) -> Self {
    |

error[E0599]: no method named `source_file` found for reference `&proc_macro::Span` in the current scope
   --> /Users/user/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/proc-macro2-1.0.94/src/wrapper.rs:462:56
    |
462 |             Span::Compiler(s) => SourceFile::nightly(s.source_file()),
    |                                                        ^^^^^^^^^^^
    |
help: there is a method `source` with a similar name
    |
462 -             Span::Compiler(s) => SourceFile::nightly(s.source_file()),
462 +             Span::Compiler(s) => SourceFile::nightly(s.source()),
    |

Some errors have detailed explanations: E0412, E0599.
For more information about an error, try `rustc --explain E0412`.
error: could not compile `proc-macro2` (lib) due to 3 previous errors
warning: build failed, waiting for other jobs to finish...
Error: Building IDL failed. Run `ANCHOR_LOG=true anchor idl build` to see the logs.